# GPU_Training

./: .gitignore  README.md  _config.yml  _toc.yml  mkdocs.yml  pyproject.toml  todo.md  training_course_plan.md
.github/workflows/: deploy_docs.yml
_static/: gol_timings_NVIDIA_GeForce_RTX_3070_AMD_Ryzen_9_5950X_16-Core_Processor_ts100.csv  gol_timings_NVIDIA_GeForce_RTX_3070_AMD_Ryzen_9_5950X_16-Core_Processor_ts100_naive_numpy_cupy.csv
content/: create_plots.py  game_of_life.py  game_of_life_create_plots.py  game_of_life_experiment.py  game_of_life_experiment_profiled.py  game_of_life_mem_opt.py  game_of_life_profiled.py  python_gpu_diffusion.py  spack.md  support_scripts.py  temperature_diffusion.py  temperature_diffusion_experiment.py
course/: 00_setup.md  01_spack.md  index.md  spack_cheat_sheet.md  tips_and_tricks.md
course/css/: custom.css
course/lessons/: 00_setup.md  01_spack.md  02_numpy_and_cupy.md  03_improving_performance_with_cupy.md  04_running_models.md
exeter_isca_slurm_submission_scripts/: cuda_check.slurm  game_of_life.slurm  game_of_life_nvidia_nsight_profiling.slurm  system_info.slurm  temperature_diffusion.slurm
lessons/: conways_game_of_life.ipynb  profiling.ipynb  slurm.ipynb  spack.ipynb  temperature_diffusion.ipynb  theory.ipynb
lessons/.ipynb_checkpoints/: conways_game_of_life-checkpoint.ipynb  slurm-checkpoint.ipynb  temperature_diffusion-checkpoint.ipynb
questions/: exercise_spack.json  summary_spack.json
slurm_submission_scripts/: cuda_check.slurm  game_of_life.slurm  game_of_life_nvidia_nsight_profiling.slurm  system_info.slurm  temperature_diffusion.slurm
